example/namespace.yaml
# Criacao do namespace
apiVersion: v1
kind: Namespace
metadata:
  name: example
