example/deployment-2.yaml
# Criacao do deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example2
  namespace: example
  labels:
    app: example2
    equipe: astin-02
spec:
  selector:
    matchLabels:
      app: example2
  template:
    metadata:
      labels:
        app: example2
    spec:
      containers:
        - name: example
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080
