example/service.yaml
# Criacao do servico
kind: Service
apiVersion: v1
metadata:
  name: example-service
  namespace: example
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: example
